<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearSettings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <TextView
            android:text="@string/settings"
            style="@style/SettingsText"/>

    </androidx.appcompat.widget.Toolbar>

    <Switch
        android:id="@+id/switch1"
        android:text="@string/black_theme"
        style="@style/SwitchStyle"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <TextView
        android:id="@+id/shareTextView"
        android:text="@string/share_app"
        style="@style/ButtonSettings"
        app:drawableRightCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/callTextView"
        android:text="@string/call_center"
        style="@style/ButtonSettings"
        app:drawableRightCompat="@drawable/ic_baseline_support_agent_24" />

    <TextView
        android:id="@+id/agreementTextView"
        android:text="@string/agreement"
        style="@style/ButtonSettings"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

</LinearLayout>