<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textFontWeight="500"
        android:layout_marginTop="16dp"
        android:paddingBottom="40dp"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:background="@drawable/roundedbutton"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:background="@drawable/roundedbutton"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:background="@drawable/roundedbutton"/>
</LinearLayout>